syntax = "proto3";

service CNCService {
  rpc ReadVariable(ReadRequest) returns (ReadResponse);
  rpc WriteVariable(WriteRequest) returns (WriteResponse);
}

message ReadRequest {
  string node_id = 1;  // ex: "ns=2;s=Axis1.Position"
  string node_id2 = 2;
  string node_id3 = 3;
  string node_id4 = 4;
  string node_id5 = 5;
  string node_id6 = 6;
  string node_id7 = 7;
  string node_id8 = 8;
  string node_id9 = 9;
  string node_id10 = 10;
}

message ReadResponse {
  string value = 1;
}

message WriteRequest {
  string node_id = 1;
  string value = 2;
}

message WriteResponse {
  bool success = 1;
}
